@@ -1,3 +1,4 @@
+.title_menu= link_to "Create New Account", new_account_path
 .title
   Accounts
 %br
@@ -29,6 +30,3 @@
         You don't have any accounts set up. Please
         = link_to "create new account", new_account_path
         first.
-%br
-%hr{ :size => 1 }
-= link_to "Create New Account", new_account_path
