@@ -3,6 +3,7 @@ Sat, Dec 13, 2008
 - Insalled [annotate_models] plugin and generated model annotations.
 - Generated campaign fixtures.
 - Updated [Campaign] model to include actual vs. targets.
+- Added permissions to [Campaign/New].
 
 Thu, Dec 11, 2008
 ---------------------------------------------------------------------
